@@ -1,0 +1,4 @@
+	.text
+	.byte	0
+	.section        .text.foo,"axG",%progbits,foo,comdat
+	.byte	0
