@@ -1,3 +1,11 @@
+2011-09-15  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR binutils/13180
+	* binutils-all/group-6.d: New.
+	* binutils-all/group-6.s: Likewise.
+
+	* binutils-all/objcopy.exp: Run group-6 for ELF targrts.
+
 2011-07-22  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* binutils-all/elfedit.exp: Run elfedit-4.
