@@ -1,3 +1,10 @@
+2011-09-15  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR binutils/13180
+	* objcopy.c (is_strip_section_1): New.
+	(is_strip_section): Use it.  Remove the group section if all
+	members are removed.
+
 2011-09-08  Nick Clifton  <nickc@redhat.com>
 
 	* po/ja.po: Updated Japanese translation.
